<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Fichier des valeurs en Anglais (Fichier de base) -->

    <string name="app_name">Meet Your Friends</string>
    <string name="backButton">Back</string>
    <string name="mail">Mail</string>
    <string name="currentMail">Current Mail</string>
    <string name="newMail">New Mail</string>
    <string name="confirmMail">Confirm Mail</string>
    <string name="password">Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="genderMan">Man</string>
    <string name="genderWoman">Woman</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="birthdate">Birthdate</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="eventname">Event name</string>
    <string name="location">Location</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="createAcount">Create account</string>
    <string name="createAcountL">Create Account</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="createEvent">Create Event</string>
    <string name="showEvent">Show Event</string>
    <string name="modifyAccount">Modify Account</string>
    <string name="modifyUser">Modify User</string>
    <string name="modify">Modify</string>
    <string name="comment">Comment(s)</string>
    <string name="modifyEmail">Modify Email</string>
    <string name="modifyPassword">Modify Password</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="erroremailnull">Insert an email address!</string>
    <string name="errorpasswordnull">Insert a password!</string>
    <string name="errormailinvalid">Email invalid!</string>
    <string name="errorlogin">Email address or password incorrect!</string>
    <string name="newMailnull">Insert a new email address!</string>
    <string name="confirmMailnull">Confirm the new email address!</string>
    <string name="newPasswordnull">Insert a new password!</string>
    <string name="confirmPasswordlnull">Confirm the new password!</string>
    <string name="passwordNotSame">Passwords are not the same!</string>
    <string name="mailNotSame">Emails are not the same!</string>
    <string name="hybrid">Hybrid Mode</string>
    <string name="normal">Normal Mode</string>
    <string name="satellite">Satellite Mode</string>
    <string name="terrain">Terrain Mode</string>
    <string name="showTraffic">Show Traffic</string>
    <string name="trafficOff">Traffic Off</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="setLanguage">Set Language</string>
    <string name="settings">Settings</string>
    <string name="userSettings">User Settings</string>
    <string name="language">Language</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="createMailNull">Insert an email address!</string>
    <string name="MailInvalid">Insert a valid email address!</string>
    <string name="MailExist">Email already exists!</string>
    <string name="createPassNull">Insert a password!</string>
    <string name="createGenderNull">Choose a gender!</string>
    <string name="createFirstnameNull">Insert a firstname!</string>
    <string name="createLastnameNull">Insert a lastname!</string>
    <string name="confirmeDelete">Delete Account!</string>
    <string name="confirmeDeleteComment">Delete Comment!</string>
    <string name="confirmeDeleteEvent">Delete Event!</string>
    <string name="confirmMessage">Are you sure you want to delete your account?</string>
    <string name="confirmeMessageComment">Are you sure you want to delete your comment?</string>
    <string name="confirmMessageEvent">Are you sure you want to delete this event?</string>
    <string name="confirmOK">YES</string>
    <string name="confirmCancel">Cancel</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="black">Black</string>
    <string name="defaultColor">Default</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="lightGreen">Light Green</string>
    <string name="blue">Blue</string>
    <string name="lightBlue">Light Blue</string>
    <string name="purple">Purple</string>
    <string name="gray">Gray</string>
    <string name="white">White</string>
    <string name="actionBarSettings">ActionBar Settings</string>
    <string name="actionBarSetColor">Set background color of the action bar</string>
    <string name="actionBarColor">Color</string>
    <string name="actionBarLogo">Logo</string>
    <string name="actionBarLogoMessage">This option if selected will allow the actionbar to display the application icon.</string>
    <string name="completeFormular">Complete all information to create the event !</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="eventNameExist">This event name already exists!</string>
    <string name="guest">Guest(s)</string>
    <string name="the">The</string>
    <string name="at">at</string>

    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
    </string-array>

    <string-array name="yearEvent">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

</resources>
