<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Menu des préférences -->

    <PreferenceCategory android:title="@string/userSettings">

        <ListPreference
            android:key="prefLanguage"
            android:entries="@array/language"
            android:summary="@string/setLanguage"
            android:entryValues="@array/languageCode"
            android:title="@string/language" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/actionBarSettings" >
        <ListPreference
            android:defaultValue="#111111"
            android:entries="@array/colorName"
            android:entryValues="@array/colorCode"
            android:key="barColor"
            android:summary="@string/actionBarSetColor"
            android:title="@string/actionBarColor" />

        <CheckBoxPreference android:title="@string/actionBarLogo"
            android:defaultValue="true"
            android:summary="@string/actionBarLogoMessage"
            android:key="icon" />

    </PreferenceCategory>

</PreferenceScreen>