<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.meetyourfriends.ModifyAccount">

    <EditText
        android:id="@+id/maCurrentMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/currentMail"/>
    <EditText
        android:id="@+id/maNewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/newMail"
        android:layout_marginTop="60dp"/>
    <EditText
        android:id="@+id/maConfirmMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/confirmMail"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/maErrorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColorHint="#f00"
        android:layout_marginTop="180sp"
        android:visibility="invisible"
        android:textColor="@color/colorPrimary"
        android:hint="@string/newMailnull"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="220dp"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/maCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="260dp"
        android:inputType="textPassword"
        android:hint="@string/currentPassword"/>
    <EditText
        android:id="@+id/maNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:textColor="@color/colorPrimary"
        android:inputType="textPassword"
        android:hint="@string/newPassword"/>
    <EditText
        android:id="@+id/maConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:inputType="textPassword"
        android:hint="@string/confirmPassword"
        android:layout_marginTop="380dp"/>

    <TextView
        android:id="@+id/maErrorPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColorHint="#f00"
        android:layout_marginTop="440sp"
        android:visibility="invisible"
        android:textColor="@color/colorPrimary"
        android:hint="@string/newPasswordnull"/>

    <Button
        android:id="@+id/maModifyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:onClick="modifyEmail"
        android:text="@string/modifyEmail"/>

    <Button
        android:id="@+id/maModifyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:onClick="modifyPassword"
        android:text="@string/modifyPassword"/>

    <Button
        android:id="@+id/maDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="495dp"
        android:text="@string/deleteAccount"
        android:onClick="deleteAccount"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
