<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.examusple.vincent.meetyourfriends.Login">

    <EditText
        android:id="@+id/lMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160sp"
        android:textColor="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"/>

    <EditText
        android:id="@+id/lPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="230sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/lErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColorHint="#f00"
        android:layout_marginTop="300sp"
        android:visibility="invisible"
        android:textColor="@color/colorPrimary"
        android:hint="@string/errorlogin"/>

    <Button
        android:id="@+id/lLogin"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:text="@string/login"
        android:onClick="showEvents"/>

    <TextView
        android:id="@+id/lCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAcount"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="530sp"
        android:layout_centerHorizontal="true"
        android:onClick="createAccount"/>

</RelativeLayout>
