<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.meetyourfriends.CreateAccount">

    <EditText
        android:id="@+id/caMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textColor="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"/>

    <EditText
        android:id="@+id/caPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="90sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password"/>

    <View android:layout_height="4px"
        android:layout_width="match_parent"
        android:layout_marginTop="190sp"
        android:background="@color/colorPrimary"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240sp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/caMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="50sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/genderMan"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/caWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/genderWoman"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/caFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/firstname"/>

    <EditText
        android:id="@+id/caLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/lastname"/>

    <TextView
        android:id="@+id/caBirthdate"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_marginTop="450sp">
    </TextView>

    <Spinner
        android:id="@+id/caSpinnerDays"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450sp"
        android:layout_marginLeft="100sp">
    </Spinner>

    <Spinner
        android:id="@+id/caSpinnerMonths"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450sp"
        android:layout_marginLeft="170sp">
    </Spinner>

    <Spinner
        android:id="@+id/caSpinnerYears"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450sp"
        android:layout_marginLeft="300sp">
    </Spinner>

    <Button
        android:id="@+id/caSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:text="Submit"
        android:onClick="showLogin"/>

</RelativeLayout>
