<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.meetyourfriends.CreateEvent">

    <EditText
        android:id="@+id/createEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventname"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/createLocationName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"/>

        <!-- OnClick Methode (search location) -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_location"
            android:onClick="showLocalisation"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="125dp">

        <Spinner
            android:id="@+id/createListUser"
            android:layout_width="250dp"
            android:layout_height="match_parent"/>

        <!-- OnClick Methode (add guest) -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_add"
            android:layout_marginLeft="50dp"
            android:onClick="addGuest"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/CreateListGuest"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="200dp">

        <!-- Add List of Guest with Button for delete -->
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:gravity="center">

        <!-- OnClick Methode (create event) -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:onClick="createEvent"/>
    </LinearLayout>

</RelativeLayout>
