<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vincent.meetyourfriends.ShowEvent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventname"
        android:id="@+id/eventNameShow"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/showDate"
        android:text="balbla"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="55dp"
        android:id="@+id/showDescription"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:id="@+id/locationShow">

        <!-- Modify Long & Lat with the database -->
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapShow"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.vincent.meetyourfriends.Localisation" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:textSize="18dp"
        android:text="@string/guest"/>
    <ListView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:id="@+id/listGuest"
            android:layout_marginTop="340dp">

            <!-- Show Guest here -->
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="160dp"
        android:textSize="18dp"
        android:text="@string/comment"/>
    <ListView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="160dp"
        android:id="@+id/listComments">

        <!-- Show Comments here ( /!\ Button for delete) -->
    </ListView>
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="160dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/comment"
            android:id="@+id/commentShow"/>

        <!-- OnClick Methode (add comment) -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_dialog"
            android:onClick="addComment"/>
    </LinearLayout>

</RelativeLayout>
